plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    // --- Third-party ---
    implementation 'org.apache.commons:commons-text:1.12.0'
    implementation 'org.xerial:sqlite-jdbc:3.46.1.0'

    // Logging
    runtimeOnly 'ch.qos.logback:logback-classic:1.5.6'

    // --- Internal modules ---
    implementation project(':utilities')
    implementation project(':list')

    // --- Test ---
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

application {
    mainClass = 'com.emr.gds.IttiaApp'
    applicationDefaultJvmArgs = ["--add-opens", "javafx.base/com.emr.gds.fourgate.KCDdatabase=ALL-UNNAMED"]
}

javafx {
    // Latest LTS release (as of Oct 2025)
    version = '25.0.1'

    // JavaFX modules — include swing for JFXPanel usage
    modules = [
        'javafx.controls',
        'javafx.fxml',
        'javafx.graphics',
        'javafx.base',
        'javafx.swing'
    ]
}

test {
    useJUnitPlatform()
}
